新增sql解析模块